miniextendr-macros/tests/ui/fn_async.stderr
error: async functions are not supported by #[miniextendr]; R's C API is synchronous and incompatible with async executors
 --> tests/ui/fn_async.rs:6:1
  |
6 | async fn bad_async() -> i32 {
  | ^^^^^
